--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="styles.css" rel="stylesheet">
+    <script src="jquery.js"></script>
     <script src="libs.js"></script>
     <script src="script.js"></script>
   </head>
