--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="styles.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="libs.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
     <object id="all" data="wheel.svg" type="image/svg+xml"></object>
+    <div class="nino"></div>
+    <div class="circle_content academics">
+      <p class="title">ACADEMICS</p>
+      <p class="content">The academic program at AIM is more than core and supporting subjects; rather it ensures that our students attain the knowledge and skills necessary to be successful in the 21st century.  Designed as a spiral curriculum, students have the opportunity to revisit key concepts and skills while at the same time pursuing deeper and more complex applications of the same.</p>
+    </div>
+    <div class="circle_content finearts">
+      <p class="title">FINE ARTS</p>
+      <p class="content">Each area of the Fine Arts Program: Music, Visual Arts, Dance and Drama, maximizes our students’ artistic potential by developing their talents through different forms of art. Our comprehensive and well-structured Fine Arts education program engages students in a process that helps them develop self-discipline, group work, and the motivation necessary for self-esteem and success for life in a global context.</p>
+    </div>
+    <div class="circle_content sports">
+      <p class="title">SPORTS</p>
+      <p class="content">We are committed to providing each athlete with an enjoyable learning experience.  Students participate in sports to have fun while competing with others.  Although playing to win is important, the greatest reward is attained through competing with honor, practicing good sportsmanship and being humble both in victory and in defeat.  Lessons for life are learned in AIM’s courts and fields.</p>
+    </div>
+    <div class="circle_content technology">
+      <p class="title">TECHNOLOGY</p>
+      <p class="content">Our Technology Curriculum equips students for their current and future digital lives. It develops their ability to use digital tools wisely and effectively, using higher order thinking skills to face challenges and to implement solutions.  These skills involve critical examination and understanding of the ethical and social issues related to global awareness in the use of information and communications technology.</p>
+    </div>
+    <div class="circle_content multicultural">
+      <p class="title">MULTI<BR>CULTURALISM</p>
+      <p class="content">Multiculturalism is embedded in our educational programs by developing awareness and understanding, among our students, of different issues facing our world and learning to respect and celebrate the diversity of peoples, places and customs from Mexico and around the world, our planet Earth, its natural resources and environment, as well as developing digital citizenship and literacy.</p>
+    </div>
+    <div class="circle_content wellness">
+      <p class="title">WELLNESS</p>
+      <p class="content">The general goals of the Wellness Department are to strengthen AIM students´ character integrally by developing their values and social and emotional skills, as well as ensuring they care for their physical body. In this way, they become conscientious and capable of making responsible and constructive decisions to promote their own well-being and that of the community.</p>
+    </div>
   </body>
 </html>
