--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link href="styles.css" rel="stylesheet">
-    <script src="jquery.js"></script>
-    <script src="libs.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
+    <div class="nino_container">
+      <div class="nino_content">
+        <p class="nino_title1">i-PAL Philosophy</p>
+        <p class="nino_title2">i-PAL is...</p>
+        <div class="nino_g1 nino_g">
+          <p class="nino_subtitle1 nino_subtitle">A Child Centered Approach To Education</p>
+          <p class="nino_text1 nino_text">I-PAL focuses teachers and parents on the individual child’s physical, artistic, social- emotional, and intellectual development.<br/><br/>Teachers and parents develop and support a personalized educational path that responds to the individuality of each student’s strengths, needs, interests and aspirations.</p>
+        </div>
+        <div class="nino_g2 nino_g">
+          <p class="nino_subtitle2 nino_subtitle">About Continuous Learning And Growth</p>
+          <p class="nino_text2 nino_text">Through I-PAL students develop the motivation to initiate their own learning and strive for challenging learning goals.<br/><br/>Through i-PAL students are helped to become self-directed learners who are able to demonstrate, articulate, and evaluate what they learn and what they want to learn.</p>
+        </div>
+        <div class="nino_g3 nino_g">
+          <p class="nino_subtitle3 nino_subtitle">Collaboration</p>
+          <p class="nino_text3 nino_text">i-PAL encourages collaboration in order to maximize the power of multiple minds in reaching excellence.<br/><br/>Through i-PAL parents and educators become partners in supporting students to reach their potential.<br/><br/>Students are provided with opportunities for independent and collaborative learning in which they interact, ask critical questions, problem solve and learn how to make decisions together. </p>
+        </div>
+        <div class="nino_g4 nino_g">
+          <p class="nino_subtitle4 nino_subtitle">Differentiating Instruction</p>
+          <p class="nino_text4 nino_text">The principles of personalized learning support children to learn through active participation; to learn in a variety of ways; and to learn at different rates.<br/><br/>With i-PAL we group for instruction so as to meet the learning needs of a small group of students.  Our grouping is flexible and changes as the needs of groups of students change.</p>
+        </div>
+        <div class="nino_g5 nino_g">
+          <p class="nino_subtitle5 nino_subtitle">About Social-Emotional Development</p>
+          <p class="nino_text5 nino_text">The divisional organization of AIM, Exploratory, Development and Specialization, acknowledges the different stages of child development and provides developmentally appropriate instruction to each of the different stages.<br/><br/>Our Wellness program encompasses Values Education, Character Counts, service learning and community service.  This way the students are taught things such as peaceful problem solving, tolerance and acceptance of diversity. </p>
+        </div>
+        <div class="nino_g6 nino_g">
+          <p class="nino_subtitle6 nino_subtitle">About Flexible And Varied Teaching</p>
+          <p class="nino_text6 nino_text">With i-PAL, teaching and grouping strategies respond to student interests and needs.<br/><br/>With i-PAL we emphasize common learning outcomes but allow for different ways of reaching the outcome.  The focus is what has to be learned and there are a number of ways things can be learned.</p>
+        </div>
+        <div class="nino_g7 nino_g">
+          <p class="nino_subtitle7 nino_subtitle">About Learning Outcomes</p>
+          <p class="nino_text7 nino_text">i-PAL focuses on what students actually learn rather than what we teach.<br/><br/>With i-PAL our curriculum is about learning outcomes, what skills we want the students to be able to show us they have learned by the end of the year.  We  also establish benchmarks along the way so we can give feedback regarding their progress. </p>
+        </div>
+        <div class="nino_g8 nino_g">
+          <p class="nino_subtitle8 nino_subtitle">About Using Technology To Achieve 21st Century Skills</p>
+          <p class="nino_text8 nino_text">i-PAL incorporates technology in all the areas of the student learning.<br/><br/>Under i-PAL, technology is used, among other things, to understand and appreciate multiculturalism.</p>
+        </div>
+        <div class="nino_g9 nino_g">
+          <p class="nino_subtitle9 nino_subtitle">About Serving The Community</p>
+          <p class="nino_text9 nino_text">i-PAL provides the platform by which our students learn by doing to “Serve with Excellence”.<br/><br/>i-PAL leads to the understanding that life is about contributing to make the world a better place for all.</p>
+        </div>
+      </div>
+    </div>
     <object id="all" data="wheel.svg" type="image/svg+xml"></object>
-    <div class="nino"></div>
     <div class="circle_content academics">
       <p class="title">ACADEMICS</p>
       <p class="content">The academic program at AIM is more than core and supporting subjects; rather it ensures that our students attain the knowledge and skills necessary to be successful in the 21st century.  Designed as a spiral curriculum, students have the opportunity to revisit key concepts and skills while at the same time pursuing deeper and more complex applications of the same.</p>
