--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
       <p class="title">WELLNESS</p>
       <p class="content">The general goals of the Wellness Department are to strengthen AIM students´ character integrally by developing their values and social and emotional skills, as well as ensuring they care for their physical body. In this way, they become conscientious and capable of making responsible and constructive decisions to promote their own well-being and that of the community.</p>
     </div>
+    <a href="#" class="btn prev">&laquo;</a>
+    <a href="#" class="btn next">&raquo;</a>
   </body>
 </html>
