--- a/es.html
+++ b/es.html
@@ -27,7 +27,7 @@
           <p class="nino_text3 nino_text"> i-PAL motiva la colaboraci&oacute;n para as&iacute; maximizar el poder de m&uacute;ltiples mentes para alcanzar la excelencia. A trav&eacute;s de i-PAL, los padres y los maestros se vuelven compañeros en apoyar a los estudiantes a alcanzar su potencial. <br> <br> Se les provee a los estudiantes oportunidades para el aprendizaje colaborativo e independiente en el cual interactúan, hacen preguntas críticas, solucionan problemas y aprenden cómo tomar decisiones en conjunto.</p>
         </div>
         <div class="nino_g4 nino_g">
-          <p class="nino_subtitle4 nino_subtitle">Personalizar la Enseñza</p>
+          <p class="nino_subtitle4 nino_subtitle">Personalizar la Enseñanza</p>
           <p class="nino_text4 nino_text">Los principios de la enseñanza personalizada ayudan a que los niños aprendan a través de la participación activa; a aprender en una variedad de formas, y a aprender a diferentes pasos. <br/><br/> En i-PAL, agrupamos a los niños para cumplir las necesidades de un pequeño grupo de estudiantes. Nuestro agrupamiento es flexible y cambia conforme a las necesidades de los niños. </p>
         </div>
         <div class="nino_g5 nino_g">
@@ -59,7 +59,7 @@
     </div>
     <div class="circle_content finearts">
       <p class="title">FINE ARTS</p>
-      <p class="content">ECada área del Programa de Fine Arts: música, artes visuales, danza y teatro, maximiza el potencial artístico de nuestros estudiantes mediante el desarrollo de sus talentos a través de diferentes formas de arte. Nuestro programa de educación integral Fine Arts involucra a los estudiantes en un proceso que ayuda a desarrollar la auto-disciplina, el trabajo en equipo y la motivación necesaria para la autoestima y el éxito de por vida en un contexto global.</p>
+      <p class="content">Cada área del Programa de Fine Arts: música, artes visuales, danza y teatro, maximiza el potencial artístico de nuestros estudiantes mediante el desarrollo de sus talentos a través de diferentes formas de arte. Nuestro programa de educación integral Fine Arts involucra a los estudiantes en un proceso que ayuda a desarrollar la auto-disciplina, el trabajo en equipo y la motivación necesaria para la autoestima y el éxito de por vida en un contexto global.</p>
     </div>
     <div class="circle_content sports">
       <p class="title">DEPORTES</p>
@@ -77,5 +77,7 @@
       <p class="title">BIENESTAR</p>
       <p class="content">Los objetivos generales del Departamento de Bienestar son fortalecer el carácter AIM del alumnado de manera integral mediante el desarrollo de sus valores y habilidades sociales y emocionales, así como asegurar que se preocupan por su cuerpo físico. De esta manera, se convierten en consciente y capaz de tomar decisiones responsables y constructivas para promover su propio bienestar y el de la comunidad.</p>
     </div>
+    <a href="#" class="btn prev">&laquo;</a>
+    <a href="#" class="btn next">&raquo;</a>
   </body>
 </html>
