Typo en es.html

--- a/es.html
+++ b/es.html
@@ -71,7 +71,7 @@
     </div>
     <div class="circle_content multicultural">
       <p class="title">MULTICULTURALISMO</p>
-      <p class="content"> El multiculturalismo está integrado en nuestros programas educativos mediante el desarrollo de la conciencia y la comprensión entre nuestros estudiantes de diferentes problemas que enfrenta nuestro mundo y aprender a respetar y celebrar la diversidad de los pueblos, lugares y costumbres de México y en todo el mundo, nuestro planeta tierra, sus recursos naturales recursos y medio ambiente, así como el desarrollo de la ciudadanía digital y la alfabetización.</p>
+      <p class="content"> El multiculturalismo está integrado en nuestros programas educativos mediante el desarrollo de la conciencia y la comprensión entre nuestros estudiantes de diferentes problemas que enfrenta nuestro mundo y aprender a respetar y celebrar la diversidad de los pueblos, lugares y costumbres de México y en todo el mundo, nuestro planeta tierra, sus recursos naturales y medio ambiente, así como el desarrollo de la ciudadanía digital y la alfabetización.</p>
     </div>
     <div class="circle_content wellness">
       <p class="title">BIENESTAR</p>
