--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <p class="content">Our Technology Curriculum equips students for their current and future digital lives. It develops their ability to use digital tools wisely and effectively, using higher order thinking skills to face challenges and to implement solutions.  These skills involve critical examination and understanding of the ethical and social issues related to global awareness in the use of information and communications technology.</p>
     </div>
     <div class="circle_content multicultural">
-      <p class="title">MULTI<BR>CULTURALISM</p>
+      <p class="title">MULTICULTURALISM</p>
       <p class="content">Multiculturalism is embedded in our educational programs by developing awareness and understanding, among our students, of different issues facing our world and learning to respect and celebrate the diversity of peoples, places and customs from Mexico and around the world, our planet Earth, its natural resources and environment, as well as developing digital citizenship and literacy.</p>
     </div>
     <div class="circle_content wellness">
